syntax = "proto3";

package protoconf;

import "tableau/protobuf/tableau.proto";

option go_package = "github.com/tableauio/loader/test/go-tableau-loader/protoconf";

import "common_conf.proto";

option (tableau.workbook) = {
  name: "Patch.xlsx"
};

message PatchReplaceConf {
  option (tableau.worksheet) = {
    name: "PatchReplaceConf"
    patch: PATCH_REPLACE
  };
  string name = 1 [(tableau.field) = { name: "Name" }];
  repeated int32 price_list = 2 [(tableau.field) = { name: "Price" layout: LAYOUT_INCELL }];
}

message PatchMergeConf {
  option (tableau.worksheet) = {
    name: "PatchMergeConf"
    patch: PATCH_MERGE
  };
  string name = 1 [(tableau.field) = { name: "Name" }];
  repeated int32 price_list = 2 [(tableau.field) = { name: "Price" layout: LAYOUT_INCELL }];
  map<uint32, Item> item_map = 3 [(tableau.field) = { key: "ID" layout: LAYOUT_HORIZONTAL }];
}
